# LLMOPs_RAG

./: .gitignore  pyproject.toml  requirements.txt  test_local_models.py  test_production_models.py
multi_doc_chat/config/: config.yaml
multi_doc_chat/exception/: exception.py
multi_doc_chat/logger/: logger.py
multi_doc_chat/prompts/: prompt_library.py
multi_doc_chat/src/document_chat/: retrieval.py
multi_doc_chat/src/document_ingestion/: data_ingestion.py
multi_doc_chat/utils/: document_ops.py  file_io.py  model_loader.py
notebook/: experiment.ipynb  rag.ipynb
test/: test_config_loader.py  test_docs_ops.py  test_end_to_end_rag.py  test_file_io.py  test_ingestion.py  test_local_models.py  test_logger_exception.py  test_model_loader.py
